# chrisdone-xmonad

./: .dir-locals.el  .ghci-client  .gitignore  README.md  i3status.conf  panel.js  stack.yaml  xmonad-chrisdone.cabal
src/: .ghci  DOM.hs  DevelMain.hs  ECMA.hs  JQuery.hs  Main.hs
src/Data/Time/: Zone.hs
src/XMonad/: Suave.hs
src/XMonad/Suave/: Client.hs  Server.hs  Types.hs  View.hs  Window.hs
