Name:                xmonad-chrisdone
Version:             0.1
Synopsis:            My xmonad.
Description:         My xmonad configuration.
License:             BSD3
License-file:        LICENSE
Author:              Chris Done
Maintainer:          chrisdone@gmail.com
Category:            Desktop
Build-type:          Simple
Cabal-version:       >=1.2
Data-files:          i3status.conf

Executable xmonad
  Ghc-options:       -threaded -O2
  Hs-source-dirs:    src
  Main-is:           Main.hs
  Build-depends:     base >= 4 && <5,
                     xmonad >= 0.9,
                     xmonad-contrib >= 0.9,
                     containers >= 0.3,
                     webkit >= 0.12.5.1
