Name:                xmonad-chrisdone
Version:             0.1
Synopsis:            My xmonad.
Description:         My xmonad configuration.
License:             BSD3
License-file:        LICENSE
Author:              Chris Done
Maintainer:          chrisdone@gmail.com
Category:            Desktop
Build-type:          Simple
Cabal-version:       >=1.2

Executable xmonad
  Ghc-options:       -threaded -O2
  Hs-source-dirs:    src
  Main-is:           Main.hs
  Build-depends:     text >= 0.11.2.0,
                     time >= 1.4.0.0,
                     old-locale >= 1.0.0.0,
                     process >= 1.1.0.0,
                     base >= 4 && <5,
                     xmonad >= 0.9,
                     xmonad-contrib >= 0.9,
                     containers >= 0.3
